# tradingo

./: .Dockerfile.swo  .dockerignore  .gitignore  .gitmodules  BatchWriter.cpp  BatchWriter.h  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu  Event.cpp  Event.h  MarketData.cpp  MarketData.h  README.md  TickRecorder.dockerfile  Toolchain.docker  autogen-cpprest.sh  autogen-deps.sh  autogen-swagger.sh  autogen.sh  cache.h  docker-compose.yml  gitVersion.cmake  main.cpp  requirements.txt  tradingo.cfg
.github/workflows/: cmake.yml  docker.yml
app/: CMakeLists.txt  tickRecorder.cpp  tradingo.cpp  tradingoLoader.cpp
app/config/: tickRecorder.cfg  tradingo.cfg  tradingo.cfg.tmpl
app/etc/: tickrecorder.service  tradingo.service
app/etc/config/: common.cfg  common.json  replayTradingo.cfg  replayTradingo.json  tickRecorder.cfg  tickRecorder.json  tradingo.cfg  tradingo.json
app/etc/config/strategy/: breakout.cfg
app/etc/hosts/ldtradingoapp/: .profile.env.swp
app/scripts/: build_tag_upload.sh  profile.env  replay.sh  start_replay.sh  start_tradingo.sh  sync_with_s3.sh  tickrecorder.sh  tradingo.sh
cmake/: GoogleTest.cmake  GoogleTest.cmake.in
config/: tickRecorder.cfg  tradingo.cfg
docker/: README.md  build_tag_upload.sh  profile.env  tradingo-base.dockerfile  tradingo-replay.dockerfile  tradingo-toolchain.dockerfile  tradingo.dockerfile  tradingobase.dockerfile  tradingoreplay.dockerfile
src/: Allocation.cpp  Allocation.h  Allocations.cpp  Allocations.h  BatchWriter.cpp  BatchWriter.h  CMakeLists.txt  CallbackTimer.cpp  CallbackTimer.h  Config.cpp  Config.h  Context.cpp  Context.h  Event.cpp  Event.h  ExponentialMovingAverage.cpp  ExponentialMovingAverage.h  Functional.cpp  Functional.h  HeartBeat.cpp  HeartBeat.h  InputParser.cpp  InputParser.h  InstrumentService.cpp  InstrumentService.h  MarketData.cpp  MarketData.h  ObjectPool.h  ObjectPool.hpp  OrderBook.h  OrderBookUtils.cpp  OrderBookUtils.h  OrderInterface.cpp  OrderInterface.h  PriceLevelContainer.h  Series.h  Signal.cpp  Signal.cpp.ignore  Signal.h  SimpleMovingAverage.cpp  (+5 more)
src/signal/: MovingAverageCrossOver.cpp  MovingAverageCrossOver.h
src/strategy/: BreakOutStrategy.cpp  BreakOutStrategy.h  CMakeLists.txt  SimpleStrategy.cpp  SimpleStrategy.h  Strategies.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  TestAllocation.cpp  TestAllocations.cpp  TestBatchWriter.cpp  TestBitMexAPI.cpp  TestBreakOutStrategy.cpp  TestConfig.cpp  TestMarketData.cpp  TestSeries.cpp  TestSignal.cpp  TestSimpleMovingAverage.cpp  TestStrategy.cpp  TestTimeControl.cpp  test_api_OrderApi.cpp  test_api_PositionApi.cpp  test_json.cpp  test_main.cpp
test/benchmark/: CMakeLists.txt  data_parsing.cpp
test/data/: TradingoReplayTestCases_testing_enter_position_extend_and_then_exit.json  TradingoReplayTestCases_testing_order_value_exceeds_balance.json  quotes_XBTUSD.json  trades_XBTUSD.json  validation_fields.json
test/data/objects/: opening_instrument.json  opening_margin.json  opening_position.json
test/fwk/: .TestEnv.cpp.swp  ApiManager.h  CMakeLists.txt  MarginCalculator.cpp  MarginCalculator.h  Params.cpp  Params.h  TempStorage.cpp  TempStorage.h  TestEnv.cpp  TestEnv.h  TestMarketData.cpp  TestMarketData.h  TestOrdersApi.cpp  TestOrdersApi.h  TestPositionApi.cpp  TestPositionApi.h  TestUtils.cpp  TestUtils.h
test/regression/: test_cases.py  tradingo.json.in
test/replay/: .replay.cpp.swp  CMakeLists.txt  ReplayBreakOutStrategy.cpp  replay.cpp  test_main.cpp
test/simulator/: CMakeLists.txt  README.md
test/simulator/src/: Domain.cpp  Domain.h  ExecWriter.h  OrderBook.h  Utils.h
test/simulator/test/: main.cpp
test/simulator/test/fwk/: TestDomain.h  TestEnv.cpp
test/strategy/: CMakeLists.txt  TestBreakOutStrategy.cpp  TestStrategies.cpp
